2000-07-13  Ian McKellar  <yakk@yakk.net.au>

	* libgnomevfs/gnome-vfs-seekable.c: (read_file), (init_seek),
	(gnome_vfs_seek_emulate), (do_seek):
	Various fixes related to tmpfile changes and also random bug fixes
	to make seekable emulation actually work.
	
	* modules/http-method.c: (do_open):
	Fix to http-method so it works with the gnome-vfs-seekable code.

2000-07-12  Ian McKellar  <yakk@yakk.net.au>

	* libgnomevfs/gnome-vfs-uri.c: (gnome_vfs_uri_to_string):
	Fixed a bug that added an extra '/'.

2000-07-12  Robin * Slomkowski <rslomkow@eazel.com>

	* gnome-vfs.spec.in: changed *.so.* to *.so*

2000-07-12  Ramiro Estrugo  <ramiro@eazel.com>

	* modules/gconf-method.c: (vfs_module_init):
	Update for GConf api changes.
	
2000-07-11  Robin Slomkowski  <rslomkow@eazel.com>

	* gnome-vfs.spec.in: removed a '.'

2000-07-11  Darin Adler  <darin@eazel.com>

	* test/.cvsignore:
	* test/test-uri.c: (test_uri_to_string), (main):
	Added some more tests that demonstrate some more problems with the
	GnomeVFSURI functions. A lot of FIXMEs in here now about the
	problems.
	
	* libgnomevfs/gnome-vfs-uri.c: (gnome_vfs_uri_to_string):
	Added a check for uri->text of NULL so that URIs like "http:"
	would not cause a core dump. But perhaps they should return NULL
	instead of creating a legal URI? Also fixed a little of the
	formatting to fit the gnome-vfs standard.

2000-07-12  Ian McKellar  <yakk@yakk.net.au>

	* data/mime/gnome-vfs.keys:
	Added `vfs-method' keys to a few mime types. This key indicates the
	name of a GNOME VFS method that can be used to decode a file of this
	type.

	* libgnomevfs/gnome-vfs-uri.c: (gnome_vfs_uri_to_string):
	Essentially rewrote gnome_vfs_uri_to_string. It was very broken
	(especially for chained URIs).

	* modules/bzip2-method.c: (do_open), (do_get_file_info):
	* modules/gzip-method.c: (do_open), (do_get_file_info):
	Fiddled with invalid URI detection.

	* modules/extfs-method.c: (strip_separators), (get_basename),